--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     /* Layout */
     .container{max-width:1100px;margin:0 auto;padding:0 20px}
-    header{position:sticky;top:0;z-index:50;background:rgba(15,17,21,.75);backdrop-filter:saturate(140%) blur(10px);border-bottom:1px solid #222}
+    header{position:sticky;top:0;z-index:100;background:rgba(15,17,21,.75);backdrop-filter:saturate(140%) blur(10px);border-bottom:1px solid #222}
     .nav{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
     .brand{display:flex;align-items:center;gap:12px}
     .badge{width:38px;height:38px;display:grid;place-items:center;background:conic-gradient(from 210deg at 50% 50%,#111 0 35%,var(--red) 35% 65%,#444 65% 100%);border-radius:12px;box-shadow:var(--shadow)}
@@ -43,6 +43,12 @@
       .mobile{display:none;position:absolute;left:0;right:0;top:64px;background:#0f1115;border-bottom:1px solid #222}
       .mobile a{display:block;padding:14px 20px;border-top:1px solid #151922}
     }
+      /* Utility: Ensure content below header does not overlap */
+      .below-header {
+        position: relative;
+        z-index: 1;
+        margin-top: 80px; /* adjust if your header height changes */
+      }
 
     /* Hero */
     .hero{padding:60px 0 24px}
