--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
     /* Layout */
     .container{max-width:1100px;margin:0 auto;padding:0 20px}
-    header{position:sticky;top:0;z-index:100;background:rgba(15,17,21,.75);backdrop-filter:saturate(140%) blur(10px);border-bottom:1px solid #222}
-    .nav{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
-    .brand{display:flex;align-items:center;gap:12px}
+  header{position:sticky;top:0;z-index:100;background:rgba(15,17,21,.75);backdrop-filter:saturate(140%) blur(10px);border-bottom:1px solid #222}
+  .nav{display:flex;align-items:center;justify-content:space-between;padding:14px 0;flex-wrap:wrap;gap:18px}
+  .brand{display:flex;align-items:center;gap:12px}
     .badge{width:38px;height:38px;display:grid;place-items:center;background:conic-gradient(from 210deg at 50% 50%,#111 0 35%,var(--red) 35% 65%,#444 65% 100%);border-radius:12px;box-shadow:var(--shadow)}
     .brand h1{font-size:18px;margin:0;letter-spacing:.5px}
 
-    .menu{display:flex;align-items:center;gap:22px}
+  .menu{display:flex;align-items:center;gap:22px;flex-wrap:wrap}
     .menu a{opacity:.86}
     .menu a.active,.menu a:hover{opacity:1}
     .cta{background:var(--red);padding:10px 14px;border-radius:12px;box-shadow:0 8px 18px rgba(225,29,72,.35);font-weight:600}
