--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <div class="ph">After</div>
           <div class="ph">Interior</div>
           <div class="ph">Ceramic</div>
-          <div class="ph">Engine Bay</div>
+          <div class="ph"><img src="images/engine-bay.jpeg" alt="Engine Bay" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
           <div class="ph">Headlights</div>
         </div>
         <p class="note" style="margin-top:10px">(Replace these placeholders with real shots later.)</p>
