adding second image

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="ph">Interior</div>
           <div class="ph">Ceramic</div>
           <div class="ph"><img src="images/engine-bay.jpeg" alt="Engine Bay" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
-          <div class="ph">Headlights</div>
+          <div class="ph"><img src="images/headlights.jpeg" alt="Headlights" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
         </div>
         <p class="note" style="margin-top:10px">(Replace these placeholders with real shots later.)</p>
       </div>
