added interior image

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="hero-grid">
           <div class="ph">Before</div>
           <div class="ph">After</div>
-          <div class="ph">Interior</div>
+          <div class="ph"><img src="images/interior.jpeg" alt="Interior" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
           <div class="ph"><img src="images/ceramic.jpeg" alt="Ceramic" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
           <div class="ph"><img src="images/engine-bay.jpeg" alt="Engine Bay" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
           <div class="ph"><img src="images/headlights.jpeg" alt="Headlights" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
