--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
       </div>
       <div class="hero-card">
         <div class="hero-grid">
-          <div class="ph">Before</div>
-          <div class="ph">After</div>
+          <div class="ph"><img src="images/before2.jpeg" alt="Before" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
+          <div class="ph"><img src="images/after2.jpeg" alt="After" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
           <div class="ph"><img src="images/interior.jpeg" alt="Interior" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
           <div class="ph"><img src="images/ceramic.jpeg" alt="Ceramic" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
           <div class="ph"><img src="images/engine-bay.jpeg" alt="Engine Bay" style="height:92px;object-fit:cover;border-radius:14px;" /></div>
