updated about us

--- a/index.html
+++ b/index.html
@@ -238,8 +238,12 @@
     </div>
     <div class="about">
       <div>
-        <p data-i18n="about_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac magna ac augue luctus efficitur. Integer vitae nibh eu nisl feugiat scelerisque. Vestibulum non egestas ipsum. Cras lacinia, arcu sed consectetur tristique, augue ante porttitor mauris, vitae tincidunt odio mi in nisl.</p>
-        <p data-i18n="about_body2">Mauris in semper mi. Etiam quis dictum lectus. Donec tempor condimentum lacus, sed volutpat nisi condimentum eget. Donec sodales nibh et urna blandit, vel eleifend nibh posuere.</p>
+        <p data-i18n="about_body">Hello, my name is Alex, and I'd like to share a little bit of my story and the idea behind The Car Spa. I'm proudly from the beautiful state of Michoacán. I came to the United States when I was 15 years old, and from a young age, I focused on working hard. Like many others, I went through different jobs, each one teaching me something valuable.</p>
+        <p data-i18n="about_body2">One of those jobs was driving a cement truck. I consider myself an organized and responsible person, and I noticed that my workdays were always better when I kept my truck clean and tidy. As you can imagine, a cement truck can get very messy, but I always found a way to keep it spotless.</p>
+        <p data-i18n="about_body3">Over time, while talking with my wife about starting a business, the idea of The Car Spa came to life. I remembered the energy and mental clarity I felt when driving a clean truck, and I wanted to share that feeling with others.</p>
+        <p data-i18n="about_body4">Today, at The Car Spa, our mission is to help all of Wichita feel that same confidence, organization, and clear mindset to achieve their goals. We clean your vehicle with patience, discretion, and the right energy, so that every time you sit behind the wheel, you feel completely in control.</p>
+        <p data-i18n="about_motto"><em>Because a clean car doesn't just look good… it makes you feel good.</em></p>
+        <p class="muted"><a href="https://youtu.be/Ucl_2QteO9I" target="_blank" rel="noopener">Watch our story on YouTube</a></p>
       </div>
       <div class="card">
         <h3 style="margin-top:0" data-i18n="about_stats">Why choose The Car Spa?</h3>
@@ -323,7 +327,7 @@
         nav_home:'Home', nav_services:'Services', nav_gallery:'Gallery', nav_about:'About', nav_contact:'Contact', nav_book:'Book Now',
         tagline:'Showroom shine, every time',
         hero_title:'Premium Detailing & Car Care in Your City',
-        hero_sub:'From quick washes to full interior & exterior detailing, ceramic protection, and fleet care — we treat your ride like it’s headed to the red carpet.',
+        hero_sub:'From quick washes to full interior & exterior detailing, ceramic protection, and fleet care — we treat your ride like it\'s headed to the red carpet.',
         cta_book:'Book an Appointment', cta_explore:'Explore Services',
         services_title:'Popular Services', services_note:'Custom quotes available', services_intro:'Keep services on the home page for quick scanning. If your menu grows large, you can add a full Services page later.',
         svc1_title:'Express Wash', svc1_desc:'Hand wash, wheel clean, quick interior vacuum, windows.',
@@ -333,7 +337,12 @@
         svc5_title:'Headlight Restoration', svc5_desc:'Clear, protect, and restore night-time visibility.',
         svc6_title:'Ceramic Coating', svc6_desc:'Long-term gloss & protection. Multi-year packages.',
         gallery_title:'Gallery', gallery_hint:'Add before/after shots to build trust. Keep it curated and punchy.',
-        about_title:'About Us', about_body:'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac magna ac augue luctus efficitur. Integer vitae nibh eu nisl feugiat scelerisque. Vestibulum non egestas ipsum. Cras lacinia, arcu sed consectetur tristique, augue ante porttitor mauris, vitae tincidunt odio mi in nisl.', about_body2:'Mauris in semper mi. Etiam quis dictum lectus. Donec tempor condimentum lacus, sed volutpat nisi condimentum eget. Donec sodales nibh et urna blandit, vel eleifend nibh posuere.',
+        about_title:'About Us', 
+        about_body:'Hello, my name is Alex, and I\'d like to share a little bit of my story and the idea behind The Car Spa. I\'m proudly from the beautiful state of Michoacán. I came to the United States when I was 15 years old, and from a young age, I focused on working hard. Like many others, I went through different jobs, each one teaching me something valuable.', 
+        about_body2:'One of those jobs was driving a cement truck. I consider myself an organized and responsible person, and I noticed that my workdays were always better when I kept my truck clean and tidy. As you can imagine, a cement truck can get very messy, but I always found a way to keep it spotless.',
+        about_body3:'Over time, while talking with my wife about starting a business, the idea of The Car Spa came to life. I remembered the energy and mental clarity I felt when driving a clean truck, and I wanted to share that feeling with others.',
+        about_body4:'Today, at The Car Spa, our mission is to help all of Wichita feel that same confidence, organization, and clear mindset to achieve their goals. We clean your vehicle with patience, discretion, and the right energy, so that every time you sit behind the wheel, you feel completely in control.',
+        about_motto:'Because a clean car doesn\'t just look good… it makes you feel good.',
         about_stats:'Why choose The Car Spa?', about_point1:'Insured, professional detailers', about_point2:'Mobile appointments available', about_point3:'Eco-friendly products', about_point4:'Transparent pricing',
         contact_title:'Contact & Booking', contact_hint:'Prefer texting or Instagram DMs? Add those links here.',
         form_name:'Name', form_email:'Email', form_service:'Service', form_message:'Message', form_send:'Send',
@@ -357,7 +366,12 @@
         svc5_title:'Restauración de Faros', svc5_desc:'Aclarado, protección y mejor visibilidad nocturna.',
         svc6_title:'Cerámico', svc6_desc:'Brillo y protección a largo plazo. Paquetes multi‑año.',
         gallery_title:'Galería', gallery_hint:'Comparte antes/después para generar confianza. Manténla curada y directa.',
-        about_title:'Sobre Nosotros', about_body:'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac magna ac augue luctus efficitur. Integer vitae nibh eu nisl feugiat scelerisque. Vestibulum non egestas ipsum. Cras lacinia, arcu sed consectetur tristique, augue ante porttitor mauris, vitae tincidunt odio mi in nisl.', about_body2:'Mauris in semper mi. Etiam quis dictum lectus. Donec tempor condimentum lacus, sed volutpat nisi condimentum eget. Donec sodales nibh et urna blandit, vel eleifend nibh posuere.',
+        about_title:'Sobre Nosotros', 
+        about_body:'Hola, mi nombre es Alex y quiero compartir un poco de mi historia y la idea detrás de The Car Spa. Soy orgullosamente del bonito estado de Michoacán. Llegué a Estados Unidos a los 15 años y, desde temprana edad, me enfoqué en trabajar. Como muchos, pasé por varios empleos de los que aprendí mucho.', 
+        about_body2:'Uno de esos trabajos fue manejando un camión de cemento. Me considero una persona organizada y responsable, y notaba que mis días de trabajo eran mucho mejores cuando mantenía mi camión limpio y ordenado. Como podrán imaginar, un camión de cemento puede ensuciarse bastante, pero yo siempre encontraba la manera de mantenerlo impecable.',
+        about_body3:'Con el tiempo, platicando con mi esposa sobre iniciar un negocio, surgió la idea de The Car Spa. Recordé la energía y claridad mental que sentía al manejar un camión limpio, y quise compartir esa sensación con más personas.',
+        about_body4:'Hoy, en The Car Spa, queremos que todo Wichita experimente esa misma confianza, organización y claridad mental para cumplir sus metas. Aquí limpiamos su auto con paciencia, discreción y la mejor energía, para que cada vez que tome el volante, sienta que tiene el control total.',
+        about_motto:'Porque un auto limpio no solo se ve bien… también te hace sentir bien.',
         about_stats:'¿Por qué elegir The Car Spa?', about_point1:'Detailers profesionales con seguro', about_point2:'Citas móviles disponibles', about_point3:'Productos eco‑amigables', about_point4:'Precios transparentes',
         contact_title:'Contacto y Citas', contact_hint:'¿Prefieres WhatsApp o Instagram? Agrega esos enlaces aquí.',
         form_name:'Nombre', form_email:'Correo', form_service:'Servicio', form_message:'Mensaje', form_send:'Enviar',
@@ -366,9 +380,7 @@
         rights:'Todos los derechos reservados.', footer_about:'Nosotros', footer_services:'Servicios', footer_contact:'Contacto',
         toast_submit:'¡Gracias! Este formulario es de demostración.'
       }
-    };
-
-    const elements = document.querySelectorAll('[data-i18n]');
+    };    const elements = document.querySelectorAll('[data-i18n]');
     function trans(key){
       return dict[current][key] || key;
     }
